--- a/packages/infinity-shared/Cargo.toml
+++ b/packages/infinity-shared/Cargo.toml
@@ -22,4 +22,6 @@ library = []
 
 [dependencies]
 cosmwasm-std = { workspace = true }
+cw721        = { workspace = true }
+cw721-base   = { workspace = true }
 thiserror    = { workspace = true }
