--- a/package.json
+++ b/package.json
@@ -1,27 +1,21 @@
 {
-  "name": "@stargazezone/infinity-types",
-  "version": "0.11.0",
+  "name": "@uju-labs/infinity-swap",
+  "version": "0.0.0",
   "description": "The official types package for the Infinity Swap protocol",
   "author": "Tasio Victoria",
-  "homepage": "https://stargaze.zone/",
   "license": "BUSL-1.1",
   "main": "lib/index.js",
   "scripts": {
-    "build": "tsc -p src/tsconfig.json",
-    "codegen": "ts-node codegen.ts"
+    "wasm": "cargo build --release --lib --target wasm32-unknown-unknown",
+    "schema": "./scripts/schema.sh",
+    "build": "bun run wasm && bun run schema",
+    "test": "cargo test --lib -- --nocapture"
   },
   "files": [
     "lib"
   ],
   "publishConfig": {
     "access": "public"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/tasiov/infinity-swap.git"
-  },
-  "bugs": {
-    "url": "https://github.com/tasiov/infinity-swap/issues"
   },
   "dependencies": {
     "@cosmjs/amino": "^0.31.0",
