--- a/package.json
+++ b/package.json
@@ -2,37 +2,23 @@
   "name": "@uju-labs/infinity-swap",
   "version": "0.0.0",
   "description": "The official types package for the Infinity Swap protocol",
-  "author": "Tasio Victoria",
-  "license": "BUSL-1.1",
-  "scripts": {
-    "wasm": "cargo build --release --lib --target wasm32-unknown-unknown",
-    "schema": "./scripts/schema.sh",
-    "optimize": "./scripts/optimize.sh",
-    "optimize-arm": "./scripts/optimize-arm.sh",
-    "build": "bun run wasm && bun run schema",
-    "test": "cargo test --lib -- --nocapture"
-  },
+  "main": "index.ts",
+  "private": true,
   "files": [
     "schema",
     "artifacts"
   ],
-  "publishConfig": {
-    "access": "public"
+  "scripts": {
+    "wasm": "cargo build --release --lib --target wasm32-unknown-unknown",
+    "gen:schema": "./scripts/schema.sh",
+    "dist": "tsc -p ./tsconfig.json",
+    "build": "bun run wasm && bun run gen:schema && bun run dist",
+    "optimize": "./scripts/optimize.sh",
+    "optimize-arm": "./scripts/optimize-arm.sh",
+    "test:unit": "cargo test --lib -- --nocapture"
   },
-  "dependencies": {
-    "@cosmjs/amino": "^0.31.0",
-    "@cosmjs/cosmwasm-stargate": "^0.31.0",
-    "@cosmjs/encoding": "^0.31.0",
-    "@cosmjs/proto-signing": "^0.31.0",
-    "@cosmjs/stargate": "^0.31.0",
-    "@cosmjs/tendermint-rpc": "^0.31.0",
-    "@cosmwasm/ts-codegen": "^0.30.1",
-    "cosmjs-types": "^0.7.2",
-    "cosmwasm": "^1.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-query": "^3.34.19",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+  "devDependencies": {
+    "lodash": "^4.17.21",
+    "typescript": "^5.2.2"
   }
 }
