--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "artifacts"
   ],
   "scripts": {
+    "lint": "eslint --fix .",
     "wasm": "cargo build --release --lib --target wasm32-unknown-unknown",
     "gen:schema": "./scripts/schema.sh",
     "dist": "tsc -p ./tsconfig.json",
@@ -18,7 +19,10 @@
     "test:unit": "cargo test --lib -- --nocapture"
   },
   "devDependencies": {
+    "@uju-labs/eslint-config-custom": "workspace:*"
+  },
+  "dependencies": {
     "lodash": "^4.17.21",
-    "typescript": "^5.2.2"
+    "typescript": "5.1.6"
   }
 }
