--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,25 +5,60 @@ on:
     types: [created, edited]
 
 jobs:
-  build_and_upload_contracts:
+  build_and_upload_x86_64:
     runs-on: ubuntu-latest
-
     steps:
       - uses: extractions/setup-just@v1
 
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Build development contracts
+      - name: Build x86_64 contracts
         run: just optimize
 
-      - name: Show data
+      - name: Show x86_64 data
         run: |
           ls -l artifacts
           cat artifacts/checksums.txt
+
+      - name: Upload x86_64 artifacts to workspace
+        uses: actions/upload-artifact@v2
+        with:
+          name: x86_64-artifacts
+          path: artifacts/
+
+  build_and_upload_arm64:
+    runs-on: macos-latest
+    steps:
+      - uses: extractions/setup-just@v1
+
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Build ARM64 contracts
+        run: just optimize-arm
+
+      - name: Show ARM64 data
+        run: |
+          ls -l artifacts
+          cat artifacts/checksums.txt
+
+      - name: Upload ARM64 artifacts to workspace
+        uses: actions/upload-artifact@v2
+        with:
+          name: arm64-artifacts
+          path: artifacts/
+
+  publish_artifacts:
+    needs: [build_and_upload_x86_64, build_and_upload_arm64]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@v2
 
       - name: Publish artifacts on GitHub
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            artifacts/*
+            x86_64-artifacts/*
+            arm64-artifacts/*
