--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,13 +37,8 @@ jobs:
 
       - name: Install Docker
         run: |
-          brew install --cask docker
-          open /Applications/Docker.app
-          # Wait for Docker to be ready
-          while ! docker info 2>/dev/null; do
-            echo "Waiting for Docker to start..."
-            sleep 1
-          done
+          brew install docker
+          colima start
 
       - name: Build ARM64 contracts
         run: just optimize-arm
