--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,11 @@ workflows:
             branches:
               ignore: /.*/
       - publish_artifacts:
+          filters:
+            tags:
+              only: /^v[0-9]+\.[0-9]+\.[0-9]+.*/
+            branches:
+              ignore: /.*/
           requires:
             - optimize_x86_64
             - optimize_arm64
