--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,6 +69,7 @@ anyhow      = "1.0.51"
 proc-macro2 = "1.0"
 quote       = "1.0"
 syn         = { version = "1.0", features = ["derive"] }
+semver      = "1.0.20"
 
 # dev-dependencies
 itertools       = "0.10.5"
