--- a/contracts/infinity-global/Cargo.toml
+++ b/contracts/infinity-global/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name       = "infinity-global"
-version    = "0.1.2"
+version    = "0.2.0"
 edition    = { workspace = true }
 repository = { workspace = true }
 license    = { workspace = true }
@@ -33,3 +33,4 @@ cw-address-like = { workspace = true }
 cw2             = { workspace = true }
 sg-std          = { workspace = true }
 thiserror       = { workspace = true }
+semver          = { workspace = true }
