--- a/contracts/infinity-index/Cargo.toml
+++ b/contracts/infinity-index/Cargo.toml
@@ -37,3 +37,4 @@ cw2              = { workspace = true }
 thiserror        = { workspace = true }
 sg-std           = { workspace = true }
 sha2             = { workspace = true }
+semver           = { workspace = true }
