--- a/contracts/infinity-router/Cargo.toml
+++ b/contracts/infinity-router/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name       = "infinity-router"
-version    = "0.1.3"
+version    = "0.2.0"
 edition    = { workspace = true }
 repository = { workspace = true }
 license    = { workspace = true }
@@ -45,3 +45,4 @@ sha2                      = { workspace = true }
 cw721-base                = { workspace = true }
 cw721                     = { workspace = true }
 cw-address-like           = { workspace = true }
+semver                    = { workspace = true }
