--- a/packages/infinity-shared/Cargo.toml
+++ b/packages/infinity-shared/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name       = "infinity-shared"
-version    = { workspace = true }
+version    = "0.2.0"
 edition    = { workspace = true }
 repository = { workspace = true }
 license    = { workspace = true }
