--- a/contracts/infinity-index/Cargo.toml
+++ b/contracts/infinity-index/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name       = "infinity-index"
-version    = "0.1.2"
+version    = "0.2.0"
 edition    = { workspace = true }
 repository = { workspace = true }
 license    = { workspace = true }
@@ -37,3 +37,4 @@ cw2              = { workspace = true }
 thiserror        = { workspace = true }
 sg-std           = { workspace = true }
 sha2             = { workspace = true }
+semver           = { workspace = true }
