--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "dependencies": {
     "lodash": "^4.17.21",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "eslint": "^8.48.0"
   },
   "devDependencies": {
     "@uju-labs/eslint-config-custom": "workspace:*"
