--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "codegen": "./scripts/schema.sh",
-    "lint": "cargo clippy --all-targets -- -D warnings && eslint .",
+    "lint": "cargo clippy --all-targets -- -D warnings",
     "wasm": "cargo build --release --lib --target wasm32-unknown-unknown",
     "build": "bun run wasm && tsc -p ./tsconfig.json",
     "optimize": "./scripts/optimize.sh",
@@ -19,10 +19,6 @@
   },
   "dependencies": {
     "lodash": "^4.17.21",
-    "typescript": "5.1.6",
-    "eslint": "^8.48.0"
-  },
-  "devDependencies": {
-    "@uju-labs/eslint-config-custom": "workspace:*"
+    "typescript": "5.1.6"
   }
 }
