--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "optimize-arm": "./scripts/optimize-arm.sh",
     "test:unit": "cargo test --lib -- --nocapture"
   },
+  "devDependencies": {
+    "typescript": "5.1.6",
+    "bun-types": "^1.0.11"
+  },
   "dependencies": {
-    "lodash": "^4.17.21",
-    "typescript": "5.1.6"
+    "lodash": "^4.17.21"
   }
 }
