--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -33,14 +33,17 @@ jobs:
             target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
+      - name: Run bun install
+        run: bun install
+
       - name: Run codegen
         run: bun run codegen
 
       - name: Check schema changes
         run: |
-          CHANGES_IN_REPO=$(git status --porcelain)
-          if [[ -n "$CHANGES_IN_REPO" ]]; then
-            echo "Repository is dirty. Showing 'git status' and 'git --no-pager diff' for debugging now:"
+          CHANGES_IN_SCHEMA_DIR=$(git status --porcelain schema/)
+          if [[ -n "$CHANGES_IN_SCHEMA_DIR" ]]; then
+            echo "Schema is dirty. Showing 'git status --porcelain schema/' for debugging now:"
             git status && git --no-pager diff
             exit 1
           fi
