--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@uju-labs/infinity-swap",
+  "name": "@stargazezone/infinity-swap-contracts",
   "version": "0.1.0",
   "private": true,
   "main": "./dist/index.js",
@@ -12,17 +12,9 @@
     "codegen": "./scripts/schema.sh",
     "lint": "cargo clippy --all-targets -- -D warnings",
     "wasm": "cargo build --release --lib --target wasm32-unknown-unknown",
-    "build": "bun run wasm && tsc -p ./tsconfig.json",
+    "build": "bun run wasm",
     "optimize": "./scripts/optimize.sh",
     "optimize-arm": "./scripts/optimize-arm.sh",
     "test:unit": "cargo test --lib -- --nocapture"
-  },
-  "devDependencies": {
-    "@types/lodash": "^4.14.202",
-    "bun-types": "^1.0.11",
-    "typescript": "5.1.6"
-  },
-  "dependencies": {
-    "lodash": "^4.17.21"
   }
 }
